# AgenticWisp

./: .gitignore  README.md  README.zh-CN.md  README.zh-TW.md  pyproject.toml
.github/workflows/: ci.yml
agenticwisp/: __init__.py  cli.py  demo.py  i18n.py  install_hooks.py  lamp.py  page.py  palette.py  pricing.py  protocol.py  roster.py  signal.py  usage.py  wispd.py
agenticwisp/tui/: __main__.py  app.py  effects.py  render.py
hooks/: settings-snippet.json
tests/: test_bin_wisp.py  test_cli.py  test_demo.py  test_effects.py  test_i18n.py  test_install_hooks.py  test_lamp.py  test_page.py  test_palette.py  test_pricing.py  test_protocol.py  test_roster.py  test_signal.py  test_tui_app.py  test_tui_render.py  test_usage.py  test_version.py  test_wispd.py
