[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticwisp"
version = "0.2.0"
description = "A signal light that mirrors a remote Claude Code session's state over your existing SSH tunnel."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["claude", "claude-code", "status-light", "tui", "textual", "ssh"]
dependencies = []  # the core (hub + hooks + browser lamp) is pure standard library

[project.optional-dependencies]
tui = ["textual>=0.60"]  # only the fancy terminal "Reactor Core" lamp needs textual

[tool.setuptools]
packages = ["agenticwisp", "agenticwisp.tui"]
