[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticwisp"
dynamic = ["version"]
description = "A status light and a status line for Claude Code, in a cyberpunk terminal panel."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Martin Li", email = "ghlasap@gmail.com" }]
keywords = ["claude", "claude-code", "status-light", "statusline", "tui", "textual", "cyberpunk"]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Topic :: Terminals",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
tui = ["textual>=0.60"]

[project.scripts]
wisp = "agenticwisp.cli:main"

[project.urls]
Homepage = "https://github.com/martinghl/AgenticWisp"
Source = "https://github.com/martinghl/AgenticWisp"

[tool.setuptools]
packages = ["agenticwisp", "agenticwisp.tui"]

[tool.setuptools.dynamic]
version = { attr = "agenticwisp.__version__" }
